public/css/hanzi-graph.css
:root {
    --background-color: #fcfcfc;
    --primary-font-color: rgba(0, 0, 0, 0.87);
    --primary-font: Roboto, Helvetica, Arial, sans-serif;
    --primary-font-weight: 300;
    --primary-header-height: 50px;
    --primary-header-font-size: 30px;
    --header-background-color: #f8f8f8;
    --secondary-header-font-size: 30px;
    --tertiary-header-font-size: 22px;
    --secondary-control-font-size: 14px;
    --header-font-family: Times, serif;
    --border: 1px solid #3333;
    --search-font-size: 20px;
    --search-input-height: 32px;
    --primary-opacity: 0.95;
    --secondary-opacity: 0.9;
    --tertiary-opacity: 0.75;
    --target-language-font-size: 24px;
    --target-language-secondary-font-size: 20px;
    --target-language-font-weight: 400;
    --base-language-font-size: 14px;
    --example-item-margin: 4px 0;
    --link-font-color: rgb(21, 36, 255);
    --input-background-color: #fff;
    --primary-input-box-shadow: 0 2px 3px 1px #eeee;
    --positive-button-color: #6de200;
    --right-button-height: 22px;
    /* I was told there would be no math */
    --right-button-margin: calc((var(--primary-header-height) - var(--right-button-height)) / 2) 0 0 20px;
    --menu-button-margin: calc(var(--primary-header-height) / 2 - 2px) 0 0 0;
    --primary-container-height: calc(100% - (var(--primary-header-height) + 2px));
    --legend-height: 30px;
    --graph-height: calc(100% - var(--legend-height) - 4px);
    --section-container-margin: 0 20px;
    --calendar-day-color: #eee;
    --bar-chart-separator-color: #121212;
    --bar-chart-height: 400px;
    --bar-chart-width: 600px;
    --bar-chart-font-size: 14px;
    --controls-padding: 14px;
    --study-result-buttons-width: 50%;
    --legend-font-size: 14px;
    --instructions-font-size: 16px;
    --accent-color: black;
    --secondary-accent-color: #d56eaf;
    --inactive-accent-color: #777;
    --secondary-inactive-accent-color: #6a82fb;
    --legend-gradient-start: #fc5c7d;
    --legend-gradient-end: #6a82fb;
    --tone-1-color: #ff635f;
    --tone-2-color: #66c42b;
    --tone-3-color: #de68ee;
    --tone-4-color: #68aaee;
    --neutral-tone-color: #000;
    --legend-switch-button-border: 1px solid #000;
    --button-border-bottom: 3px solid var(--accent-color);
    --graph-expand-button-box-shadow: 2px 2px #444;
    --tag-border: 2px solid #333;
    --examples-top-margin: 14px;
    --graph-margin-top: 14px;
    --checked-input-border: 6px solid black;
}

html {
    height: 100%;
}

body {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    font-family: var(--primary-font);
    font-weight: var(--primary-font-weight);
    background-color: var(--background-color);
    color: var(--primary-font-color);
    overflow-x: hidden;
}

a {
    color: var(--primary-font-color);
    cursor: pointer;
}

h1 {
    font-size: var(--primary-header-font-size);
    margin: 4px;
    font-family: var(--header-font-family);
}

h2 {
    font-size: var(--secondary-header-font-size);
    margin: 0;
}

h3 {
    font-size: var(--tertiary-header-font-size);
    margin: 0;
}

ul {
    list-style-type: none;
    padding: 0;
}

.header {
    display: grid;
    grid-template-columns: 50px 44px 1fr 50px;
    height: var(--primary-header-height);
    text-align: center;
}

.header.has-suggestions {
    height: auto;
}

.header h1 {
    /* keep it centered despite the logo, which gets 44px in the grid template */
    margin-right: 44px;
    line-height: var(--primary-header-height);
}

.header .logo {
    height: 30px;
    line-height: 30px;
    width: 32px;
    /* (header height - this element's height - border width*2) all over 2 */
    margin-top: calc((var(--primary-header-height) - 30px - 6px) / 2);
    border-radius: 50%;
    background-color: var(--tone-4-color);
    font-size: 20px;
    font-weight: 400;
    color: #000;
    user-select: none;
    -webkit-user-select: none;
    border: 3px solid black;
    cursor: pointer;
}

.header .logo.freq {
    background-color: var(--tone-1-color);
}

.control-container {
    max-width: 1000px;
    margin: 0 auto;
    text-align: center;
    border-bottom: var(--border);
    padding-bottom: var(--controls-padding);
}

.primary-input {
    display: inline-block;
    width: 90%;
    max-width: 600px;
    text-align: center;
    height: var(--search-input-height);
    margin: 9px auto;
    padding: 0;
    background-color: var(--input-background-color);
    box-shadow: var(--primary-input-box-shadow);
    border: var(--border);
    border-radius: 12px;
}

.primary-input .explore-button {
    display: inline-block;
    margin: 0;
}

input[type="search"] {
    appearance: none;
    height: 100%;
    width: calc(100% - 36px);
    text-align: center;
    background-color: var(--input-background-color);
    border: 0;
    font-size: var(--search-font-size);
    color: var(--primary-font-color);
    outline: 0;
}

.primary-container {
    height: var(--primary-container-height);
    display: flex;
    max-width: 1300px;
    margin: 0 auto;
}

.primary-panel {
    width: 50%;
    display: flex;
    flex-direction: column;
    margin: var(--primary-panel-margin);
}

.section-container {
    margin: var(--section-container-margin);
    flex-grow: 1;
    overflow: auto;
}

.sentence-container {
    width: calc(100% - 70px);
}

.clickable {
    cursor: pointer;
}

.word-header .add-button,
.word-header .check {
    cursor: pointer;
    float: right;
    margin-right: 20px;
    margin-top: 10px;
}

#graph {
    height: var(--graph-height);
}

#graph-container {
    margin-top: var(--graph-margin-top);
}

.flow-explanation {
    margin: 10px auto;
    text-align: center;
    font-size: var(--secondary-control-font-size);
}

#examples {
    /* avoid scrollbars while animations run, otherwise unnecessary */
    overflow-x: hidden;
    margin-top: var(--examples-top-margin);
}

#examples .explanation {
    font-weight: bold;
}

#examples .explanation {
    font-weight: bold;
}
/* ... */

